kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: testtf
  ports:
    - name: http
      port: 80
      targetPort: http
